@@ -5,7 +5,9 @@ namespace Krzysztofzylka\MicroFramework\Extra;
 enum ObjectTypeEnum
 {
 
-     case APP;
+    case APP;
+
+    case APP_LOCAL;
 
      case PA;
 
